# pisaka-demo-01

./: .gitignore  README.md  pyproject.toml
config/: db.yaml  pisaka.yaml  secrets.yaml
docs/: deps.puml  parties.puml
src/pisaka/: db.py  di.py
src/pisaka/api/: __init__.py  app.py
src/pisaka/api_lib/: authentication.py
src/pisaka/app/api/: app.py
src/pisaka/app/articles/: commands.py  db.py  entities.py  ids.py  repositories.py  security.py  slug.py
src/pisaka/app/articles/api/: article_drafts.py  articles.py  router.py
src/pisaka/app/authors/: __init__.py  commands.py  entities.py  models.py  permissions.py  repositories.py  security.py  services.py
src/pisaka/app/authors/api/: router.py
src/pisaka/app/authors/internal_api/: router.py
src/pisaka/app/internal_api/: __init__.py  app.py  articles.py  authors.py
src/pisaka/authors/: commands.py  entities.py  ids.py  models.py  repositories.py  services.py
src/pisaka/authors/api/: router.py
src/pisaka/authors/internal_api/: router.py
src/pisaka/config/: config_files.py  di.py  internal_api.py  public_api.py
src/pisaka/config/cli/: app.py  authors.py  authors_utils.py  dev.py
src/pisaka/internal_api/: app.py  authentication.py
src/pisaka/internal_api_lib/: authentication.py
src/pisaka/platform/: api.py  errors.py  logging.py
src/pisaka/platform/security/: claims.py  permissions.py  roles.py  utils.py
src/pisaka/platform/security/authentication/: cli.py  common.py  internal_api.py  public_api.py  tests.py
src/security/: authorization.py  claims.py
tests/: conftest.py
tests/app/authors/commands/: test_create_author.py
tests/app/authors/entities/: test_author.py
tests/app/authors/repositories/: test_author_repository.py
